--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <div class="container">
   <h2>To-Do List</h2>
   <input type="text" id="taskInput" placeholder="Enter a task">
+  <input type="date" id="dueDateInput">
   <button id="addTaskBtn">Add Task</button>
   <ul id="taskList"></ul>
 </div>
