added the option to press c or d for complete or delete.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <input type="text" id="taskInput" placeholder="Enter a task">
   <input type="date" id="dueDateInput">
   <button id="addTaskBtn">Add Task</button>
+  <div class="instructions">
+  <p><strong>Tip:</strong> Click a task to select it, then press <kbd>C</kbd> to mark it completed or <kbd>D</kbd> to delete it.</p>
+  <p>You can press enter or you can click on add task to add your tasks.</p>
+</div>
   <ul id="taskList"></ul>
 </div>
 <script src="script.js"></script> 
