added a motivational quote.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="instructions">
   <p><strong>Tip:</strong> Click a task to select it, then press <kbd>C</kbd> to mark it completed or <kbd>D</kbd> to delete it.</p>
   <p>You can press enter or you can click on add task to add your tasks.</p>
+  <p>Stay productive — your future self will thank you!</p>
 </div>
   <ul id="taskList"></ul>
 </div>
