Refine task priority handling and improve UI interactions

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <input type="date" id="dueDateInput">
 
 <select id="priorityInput">
+  <option value="" selected>Select priority (optional)</option>
   <option value="High">High</option>
-  <option value="Medium" selected>Medium</option>
+  <option value="Medium">Medium</option>
   <option value="Low">Low</option>
 </select>
 
